# jira-sd-discord

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
jirasddiscord/: __init__.py  __main__.py
